Adjusted the FTP to not delete everything every upload. That could be challenging.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
         password: ${{ secrets.FTP_PASSWORD }}
         server-dir: /public_html/
         local-dir: ./public/
-        dangerous-clean-slate: true  # Optional: deletes everything on server-dir before upload
+        delete: true 
